@@ -7,6 +7,7 @@ udevil (0.4.3-2) UNRELEASED; urgency=medium
   * debian/control:
     + Bump Standards-Version to 3.9.6. (no changes needed)
   * Drop debian/source/options -- no longer needed.
+  * debian/rules: Remove no needed lines.
 
  -- Mateusz Łukasik <mati75@linuxmint.pl>  Sun, 19 Apr 2015 20:44:27 +0200
 
